fixes for slider spacing and footer

--- a/css/article-slider.css
+++ b/css/article-slider.css
@@ -10,13 +10,14 @@ article {
 	}
 .slide {	
   position: absolute; 
- /* top: 50%;
-  left: 50%; */
+  padding: 30px 0 90px 0; 
+  margin-top: 20px;
   
+/*  padding-bottom: 90px; */
   
   display: none;
   background-color:#fff; 
-/*  padding: 10px 0; */
+
   color: #333;
 
 }
