--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@
 	
 
 .page-wrap {
- 	height: 100vh;
+ 	min-height: 100vh;
 	position: relative;
 	}
 footer {
